# ChangeLog for media-sound/mpd
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mpd/ChangeLog,v 1.347 2014/05/24 09:16:52 hwoarang Exp $

  24 May 2014; Markos Chandras <hwoarang@gentoo.org> mpd-0.18.10-r1.ebuild:
  Stable on amd64 wrt bug #509502

  17 May 2014; Sven Vermeulen <swift@gentoo.org> mpd-0.17.6.ebuild,
  mpd-0.18.10-r1.ebuild, mpd-0.18.10.ebuild, mpd-0.18.9.ebuild:
  Fix bug #509740 - Add USE=selinux dependency to sec-policy/selinux-mpd

  07 May 2014; Markus Meier <maekke@gentoo.org> mpd-0.18.10-r1.ebuild:
  arm stable, bug #509502

  05 May 2014; Jeroen Roovers <jer@gentoo.org> mpd-0.18.10-r1.ebuild:
  Stable for HPPA (bug #509502).

  04 May 2014; Julian Ospald <hasufell@gentoo.org> mpd-0.17.6.ebuild,
  +files/mpd-0.17.6-opus-linking.patch:
  fix build wrt #508888

*mpd-0.18.10-r1 (15 Apr 2014)

  15 Apr 2014; Christoph Mende <angelos@gentoo.org> +files/mpd-0.18.conf.patch,
  +files/mpd2.init, +mpd-0.18.10-r1.ebuild:
  Change init script to use mpd's own forking mechanism (bug #507734)

*mpd-0.18.10 (13 Apr 2014)

  13 Apr 2014; Christoph Mende <angelos@gentoo.org> +mpd-0.18.10.ebuild,
  -mpd-0.18.8.ebuild:
  Version bump, remove old

  30 Mar 2014; Christoph Mende <angelos@gentoo.org> files/mpd.init:
  Add --wait to init script to catch errors on startup

  22 Mar 2014; Christoph Mende <angelos@gentoo.org>
  -files/mpd-0.17.4-mikmod-crash.patch, -mpd-0.17.4-r2.ebuild,
  -mpd-0.18.4.ebuild, -mpd-0.18.5.ebuild, -mpd-0.18.7.ebuild,
  files/mpd.logrotate:
  Remove old, fix init script when running mpd under a different user (bug
  #497854)

*mpd-0.18.9 (09 Mar 2014)

  09 Mar 2014; Tim Harder <radhermit@gentoo.org> +mpd-0.18.9.ebuild:
  Version bump.

*mpd-0.18.8 (07 Feb 2014)

  07 Feb 2014; Tim Harder <radhermit@gentoo.org> +mpd-0.18.8.ebuild:
  Version bump. Fix conditional opus support (bug #498926).

*mpd-0.18.7 (05 Feb 2014)
