@@ -12,27 +12,27 @@ DIST mpd-0.17.6.tar.bz2 585951 SHA256 9788948175157dc1c4da4a7d36e04a4b4812cb3a79
 DIST mpd-0.18.10.tar.xz 584312 SHA256 dd506ca1d81b61ec10be6a3e7181869bd5adf0ffbb0a2e948f730826933f1c81 SHA512 120ebbcae7de24f2d660ab7d50cdd7e80ab39da2c9479cda0ad117f8f0729c0a87fa4363f06866cf6e154d6f44e09ce8f3e4f3fff240de12eb600eaec351c140 WHIRLPOOL b5e0e38903d1bf6e6bd12694944ac909c09de4e66b4d63b54e2865886206aa94577070622e8e45f09ade2674afc420778e5885729cbe49d412ca597e005de29e
 DIST mpd-0.18.9.tar.xz 584328 SHA256 0d4d3e6977cb607419abbb14c63d1e2b982acb84cd2be5346f19de5f699a68de SHA512 12e45e14108cce0a3a993b6d17dfc05ed7d14ea99cce85f202904b9bf1624bfecadbd4d465e3c9057822691a1a245e67524229b160fceb2f72d27d6a8bd56479 WHIRLPOOL 2c94529b592b953f653a3f0b76fc27a4e9bc61297e097274708dbe425b5d3559394e1e9524df874803ce3eb5ea004ea47c7066632459e574070f8e10218a6d5b
 EBUILD mpd-0.17.6.ebuild 6427 SHA256 2635cc0a08020c60891939d9e3edf9a9074ab34bb80236e37ad4cd8820124119 SHA512 90fc172bd841920fceb6ce7f0797f2ad2b197ad79b7234faabdbebf172bf6e519e2a5bd431a497a2925eba750daa77646f09d91fbcea6f2b6ea1eaf1b2f5393d WHIRLPOOL b6f7d1f60858722dc0592a4ebcd9a1f83b9db4dd344d9bfbd2d642ad0ff7d60afa8ac4066569962613fbce3d6f85313f45e354bd59357b7360fdba0118f119ee
-EBUILD mpd-0.18.10-r1.ebuild 6340 SHA256 0ef0701a5722d0779b4778311f6efe68a877b0e0077f409edfe495f45b4c8aa3 SHA512 35bbed04fe1ca8025f99c5dec0e3a909c60689e235ef54071d9d6df31c6ca64cc80f25b754b89808912d90590b99438c633527fc2ef37394451ca062d2db2911 WHIRLPOOL 9bbaff1a80b7907d5cb35585c34f5e3bc5072072ba0b84ba1df32a57627956dbea9b11e51f4b19de83937e2ee81196d90b099372695849297aea04f9cee70021
+EBUILD mpd-0.18.10-r1.ebuild 6355 SHA256 f1621b57bc13e5dca2bd7897a6a89238632096a82d5b62d60ee89bc46abd8a97 SHA512 2edfefb1b78ad308ec49d1e3f5a5ad016bc1e7e0b71e54aadf8f9d89ce0ec0fc448e2f3a96d703deb90f06dabb69143d49092b39cc20b10b624a4ff4fc2cd91f WHIRLPOOL c8fa029f3493951ea27fde6fc59b2f043281bb2ad561ef0f83aeba5eeaf9d15085bf51bbee584267c9bcf114776755eae4bdfe71a63be6b4ea1cd16a7ab52b0f
 EBUILD mpd-0.18.10.ebuild 6332 SHA256 9a2846f986ea8098368d4868ba8744b2331753d940bdbaa81ef8254ade8476d8 SHA512 bee93b601b65cb79df58c43448dbf15f61bea69324c07aded0ec78d62941cd5edff00124bc9e18db3deb0e97957ca748c62542962df5f1018055ebc9d3454db4 WHIRLPOOL 2aa8be7f30ec7ade628fb0a2e9cd7e6fccb40faf7224378971920cc02f43a793dd5972aa37fe979f20355fc14dd9f8b9d5570cdbca01b6f2e9db9c43387f1b39
 EBUILD mpd-0.18.9.ebuild 6331 SHA256 bde4bf68edfd2f77ceb6f0d6104ba46b8077b99df39d941042a5a23b06c29441 SHA512 ef99d13ade3f33cab96183f7eb9dd6bfb9bed54f2259cd89d18358810ad6bc43a721b90e81a26793961de4194d771947f0de33bb21c62d0d2c657d33efe64dd3 WHIRLPOOL fb8b3402f7018a126485a70ae4752528708d4b05b73a55adfda30ccd257222925edda9c77714cf9c50f5d7cfebe7acca331610793b8143ef24d36506b7f2e6ac
-MISC ChangeLog 49421 SHA256 2a20c2bab120332467b11896ff5fb39966366ec09e415043184ff4e612f9f54e SHA512 81de6662b0af376c21b8a2259d80628a52f636cf1e7685014dcf08334fc32e2e8321cae5bc31cb7211261c3af15d56225314d165f47a85b7c4c87c992b90518d WHIRLPOOL 215826971556491090baf36bf326d3b673f34c982dcdd97cc0329d0d45396d0100a6ae858521e2c56a6eb56bd48bfb15b686aa0395749c5454c4ce8e74b7cf2b
+MISC ChangeLog 49563 SHA256 7d81b54399a6fca0557a855e556a76229094cb7518b8165c33376f03fda42b1d SHA512 88b9921f254cac0377f40962af5e875935ca3bc42442e291e9d04497aa1eb93745866f84ae0f9f088792a92d03ad004ffd5e1b6d3ab784b93f6c76b56c0538a9 WHIRLPOOL 7252a69b63236c6146a6c834afe9cefdc210b18b9ab08a2f2535e6b95fee959a33b58f7064b68fe090be9e3d6c3e621539331d4c1fb9a3f35a8535f701a83509
 MISC metadata.xml 2057 SHA256 03ab12c4339334c9925649d19c61844c14600680d33b83736922b4537b94515c SHA512 71f55e89be531d5e1aa32182b8348899b87dfa3ef13782f52cc39748cce307273b714975016e2737d4e9941f2f4e71f31d6b38856eb5a9f1c1d33b2afc28fbb6 WHIRLPOOL 160272fbeffa01fbec0fc5bbb75f643cc4540def81f6e31bde450e18865bf43a6a329890db0bb8d3c6a22fdd740c1c1bf213cf87bc54fe103c7fadcba892a9d6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTgGOFXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJTiN7GXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88P+EP/0F3QHdDvquILAameLSQbO0R
-mmwCCrqzAW967oj3+ZDtJoRCnVnATxWu9P5OwEoeyIgR0/1BcmdqcYd+Vsap7aLG
-EsPQDKTlV2Txq4IUMrUABcac+Cm9iwyZiPyf40RAORBoO6qdPJGqrbznlcy8aSmI
-+ZoHp3ADpRsSBlg8VxFLLXbBTR1LNVn0N6s5K8B1roUoE5TOikr9CJkk5ys7vT5e
-gC6Fv2dM9aVmENO4mph0dZNL7BP6TWN2BmW31hw+h3htv2oUfhY1Qm7jAnDMGrrm
-GFCj5wyYYReGDKcvehK8OIXcjujpqiJwCIu/hxJv2+FNF5xG1RvffG+LdYlHOqqz
-1NPUMGdjAuf/D271niD5A2FBFG4v8/weMR/LhTBJXZ+LDY+BnSRVUxLIPa/KlCUx
-p53BqH4frEw9F9Lhik/YpuqqDvx++nu0TMZXVkrvqlVlbC3uhxCJsfeDCe3SxKRN
-C/WEhNitF49OO3dN/QwlXUFjIgs+p8I3IRSSBwFCIuYKp428vByOVT5vhaRuvfG1
-V8gTO0fOQLT9O+KlaiRdkkoxwBo4VR1zmk06iHaR0dYyHHnJYe7Sq6bDJPEh1UqT
-kxESqAzqbCqA8skklv5lWP4EWW/PGNFDreZHU0x1zt87skogtnZtT2ZXMlFupNzm
-TAHCrMb9Tc1OSZXn1acV
-=XKU+
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun882T4QALokCHWnkCfQntqEWl2q6yGg
+8GGZpchLU3EQfUmMPw5tFls5akgXJJskEuPXAry4L8WnlLQrjkHOZpT6vVBEKrwF
+YdUY39RuKmcJTmrOKhZCojRHTRqCyi48gsSxzZZtG71QnjojwF7Hm5s15mpsozl8
+9e7otbZyfcuj4XT5eddy2ve+7njAgtOc9dHzBZhhWVVzVHhwoMvIa3p81x+OLI1G
+tw02Y5fyYZ09NbxFjh/z/JMNro+BR4JzUxPTMfj8+WxjtWGWiUthBER3gPhm0Wk6
+D1oNmMfNYhpgGDuFYOGz4FXJU7Jncw9DKpwk5p3M3q+Z+hVsI+fJhIZ/QH6M4rAo
+UmOlxfcvySZnsiyZm0LrMbZ/oYLFn3oB4oq0zAMZvQTUKimyOyzjOLVdamnsR7Um
+ZTLqOcAghRwko5DJJsdYWUDNRh9a0uZPwBZP1gwGJobRDFcmECF3vRq7YnoYNnBN
+L/yckqhKcMTva2gQtiqJOBdfBMjQkDYlUNfGukqR4Oc8/cr+8HOiHokSBX/sjiHs
+/XCmQmwx14/kQtqCizFVY0QIZM/kzi4lY/xNxxOq6CXj937xGJPKFVZkqEPO0RIE
+DQN0CNqwUDDwuYaiS3FDf/qCSkA2LoGbc2TYmwcMqCNXnlVR7GM/sEyILHs5+XDs
+UWvcosw0mRuGYGJpE+Dd
+=apT0
 -----END PGP SIGNATURE-----
